--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,15 @@
 name = "guessing-game-bot"
 version = "0.1.0"
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+authors = ["Alex Black <wa7@sa34.cx>"]
+description = "I'll fill it in later..."
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/wa7sa34cx/guessing-game-bot"
+readme = "README.md"
 
 [dependencies]
+teloxide = { version = "0.5.2", features = ["auto-send", "macros"] }
+dotenv = "0.15.0"
+log = "0.4"
+pretty_env_logger = "0.4.0"
+tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
