--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2018"
 authors = ["Alex Black <wa7@sa34.cx>"]
 description = "I'll fill it in later..."
-license = "MIT OR Apache-2.0"
+license = "MIT"
 repository = "https://github.com/wa7sa34cx/guessing-game-bot"
 readme = "README.md"
 
